<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Simple Tasks</string>

    <string name="text_remind">Remind</string>
    <string name="text_repeat">Repeat</string>
    <string name="text_save">Save</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_ok">OK</string>
    <string name="text_untitled">Untitled</string>
    <string name="text_undated">Undated</string>
    <string name="text_no_remind">No Remind</string>
    <string name="text_no_repeat">No Repeat</string>
    <string name="text_set_date">Set Date</string>
    <string name="text_set_time">Set Time</string>

    <string name="hint_title">Enter task title</string>
    <string name="hint_exec_date">Task date</string>
    <string name="hint_remind_time">Time</string>
    <string name="hint_remind_date">Date</string>
    <string name="hint_repeat">Repeat</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_add">Add</string>
    <string name="action_delete">Delete</string>

    <string name="taskImage">taskImage</string>
    <string name="clearButton">clearButton</string>

    <string name="single_selection">1 Item Selected</string>
    <string name="multiple_selection">Items Selected</string>

    <string name="dialog_delete">Delete selected items?</string>

</resources>
