<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/frag_add_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/taskImage"
            android:src="@drawable/ic_launcher" />

        <EditText
            android:id="@+id/frag_add_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_title"
            android:inputType="text"
            android:textSize="@dimen/frag_add_text_size" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/frag_add_task_date"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/hint_exec_date"
            android:background="@drawable/my_pressable_background"
            android:clickable="true"
            android:textSize="@dimen/frag_add_text_size"
            android:text="manise" />

        <ImageButton
            android:id="@+id/frag_add_clear_task_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/my_pressable_background"
            android:contentDescription="@string/clearButton"
            android:src="@drawable/ic_action_remove" />
    </LinearLayout>

    <TextView
        android:id="@+id/frag_add_text_remind"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_remind"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/frag_add_remind_time"
                android:layout_width="match_parent"
                android:layout_height="@dimen/frag_add_remind_fields_height"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/hint_remind_time"
                android:textSize="@dimen/frag_add_text_size"
                android:clickable="true"
                android:background="@drawable/my_pressable_background" />

            <TextView
                android:id="@+id/frag_add_remind_date"
                android:layout_width="match_parent"
                android:layout_height="@dimen/frag_add_remind_fields_height"
                android:ems="10"
                android:gravity="center"
                android:textSize="@dimen/frag_add_text_size"
                android:clickable="true"
                android:background="@drawable/my_pressable_background" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/frag_add_clear_remind"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/my_pressable_background"
                android:contentDescription="@string/clearButton"
                android:src="@drawable/ic_action_remove" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/frag_add_text_repeat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_repeat"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/frag_add_repeat"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/hint_repeat"
            android:textSize="@dimen/frag_add_text_size"
            android:clickable="true"
            android:background="@drawable/my_pressable_background" />

        <ImageButton
            android:id="@+id/frag_add_clear_repeat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/my_pressable_background"
            android:contentDescription="@string/clearButton"
            android:src="@drawable/ic_action_remove" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/frag_add_button_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/text_cancel" />

        <Button
            android:id="@+id/frag_add_button_save"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/text_save" />

    </LinearLayout>

</LinearLayout>